# upside-my-app-01

./: Dockerfile  commit_test.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
