[project]
name = "devops-demo-api"
version = "1.0.0"
description = "DevOps Demo API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.4.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "httpx==0.28.1",
    "pytest-asyncio==0.25.3",
]
